--- a/LyrOn/LyrOnPage.xaml
+++ b/LyrOn/LyrOnPage.xaml
@@ -1,4 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:LyrOn" x:Class="LyrOn.LyrOnPage">
-	<Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    xmlns:local="clr-namespace:LyrOn" 
+    x:Class="LyrOn.LyrOnPage"
+    Title="LyrOn">
+	<StackLayout>
+        <Button x:Name="btnMostrar" Text="Canciones Guardadas" HorizontalOptions="FillAndExpand" />
+        <Button x:Name="btnBuscar" Text="Buscar Canciones" HorizontalOptions="FillAndExpand" />
+    </StackLayout>
 </ContentPage>
